src/css/home.css
body, html, main {
    min-height: 100% !important;
    height: 100% !important;
    min-width: 100% !important;
    width: 100% !important;
}

.landing {
    width: 100%;
    height: 100%;
}

.landing-text .x-heading, .landing-text .sub-heading {
    margin: 8px;
}

.landing-text .sub-heading {
    max-width: 400px;
    opacity: 0.8;
}

.landing-text, .landing-image {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.landing-text {
    left: 90px;
    text-align: left
}

.landing-image {
    right: 90px;
    width: 30%;
    z-index: 501;
}

.landing i {
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none;          /* Likely future */
}

.down {
    position: absolute;
    bottom: 60px;
    cursor: pointer;
    padding: 8px;
}

.post-item {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 100%;
    -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
            transition: all 0.3s ease-in-out;
    cursor: pointer;
}

.post-item:hover {
    position: relative;
    background-size: 110%;
    box-shadow: 0 0px 32px rgba(0, 0, 0, 0.25);
    z-index: 100;
}

.post-item:hover > .post-item-background {
    background-color: rgba(0, 0, 255, 0.75);
}

.post-item-background {
    box-sizing: border-box;
    width: 100%;
    padding-top: 60px;
    padding-bottom: 60px;
    padding-left: 90px;
    padding-right: 60px;
    background-color: rgba(0, 0, 180, 0.75);
    -webkit-transition: background 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s, padding 0.2s ease-in-out 0.2s;
       -moz-transition: background 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s, padding 0.2s ease-in-out 0.2s;
            transition: background 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s, padding 0.2s ease-in-out 0.2s;
}

.post-item-background .row {
    min-height: 200px;
    -webkit-transition: min-height 0.2s ease-in-out .2s;
       -moz-transition: min-height 0.2s ease-in-out .2s;
            transition: min-height 0.2s ease-in-out .2s;
}

.post-item-background .row * {
    align-self: center;
}

.post-item-background .row .col-right {
    -webkit-transition: opacity 0.2s ease-in-out;
       -moz-transition: opacity 0.2s ease-in-out;
            transition: opacity 0.2s ease-in-out;
}

.menuicon {
    text-align: center;
    position: absolute;
    left: 90px;
    top: 90px;
    padding: 8px;
    cursor: pointer;
    z-index: 500;
}

.menuicon * {
    width: 30px;
    height: 3px;
    margin-bottom: 6px;
    background-color: blue;
    transform-origin: center left;
    -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
            transition: all 0.3s ease-in-out;
}

.close * {
    background-color: black;
}

.close .line1 {
    transform: rotateZ(45deg) translateX(-2px);
}

.close .line2 {
    width: 0;
    margin-left: 12px;
    margin-right: 18px;
}

.close .line3 {
    transform: rotateZ(-45deg) translateX(-2px);
}

.menu {
    box-sizing: border-box;
    position: absolute;
    display: flex;
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background-color: blue;
    z-index: 500;
    overflow: hidden;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.menu .links {
    position: absolute;
    top: 50%;
    left: 90px;
    transform: translateY(-50%);
}

.menu a {
    box-sizing: border-box;
    display: block;
    width: 400px;
    padding-top: 8px;
    padding-bottom: 8px;
    color: black;
    border: 2px solid black;
    font-size: 2.25em;
    text-decoration: none;
    margin: 30px 0 30px 0;
    font-weight: 300;
}

@media only screen and (max-width: 1120px){

    .x-heading {
        font-size: 2.25em;
    }

    .landing {
        min-height: 100%;
        height: auto;
        text-align: left;
        box-sizing: border-box;
        padding: 20px 20px 20px 20px;
        text-align: center;
    }
    
    .landing-text, .landing-image, .landing i {
        position: initial;
        transform: translate(0, 0);
    }

    .menuicon {
        position: initial;
    }

    .menuicon * {
        position: relative;
        z-index: 500;
    }
    
    .landing-text, .landing-image {
        box-sizing: border-box;
        width: 100%;
    }
    
    .landing-text span {
        display: block;
    }
    
    .landing-text h2 {
        font-size: 1.5em;
    }

    .landing-image {
        height: 300px !important;
        width: auto;
        mix-blend-mode: initial !important;
    }
    
    .post-item {
        background-size: cover;
    }

    .post-item-background {
        padding: 30px 30px 30px 64px;
    }

    .post-item-background .row {
        box-sizing: border-box;
        width: 98%;
    }

    .post-item:hover {
        position: initial;
        background-size: cover;
        box-shadow: none;
        z-index: initial;
    }

    .menu .links {
        left: 50vw;
        transform: translate(-50%, -50%);
        width: 80vw;
    }
    
    .menu a {
        box-sizing: border-box;
        width: 100%;
    }
    
}

